[gd_scene load_steps=5 format=3 uid="uid://brlm6nx5qcr36"]

[ext_resource type="Script" path="res://scene/Menu/GameMenu.gd" id="1_e57uu"]
[ext_resource type="Texture2D" uid="uid://dtd84tt6kxjeq" path="res://ImportFile/gameLogo.png" id="2_lb1tg"]
[ext_resource type="AudioStream" uid="uid://dlthjx4hh8t6r" path="res://ImportFile/Sounds/Music/menu_theme.wav" id="3_en3jt"]

[sub_resource type="LabelSettings" id="LabelSettings_6hbmy"]
font_size = 29
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="GameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e57uu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.215686, 0.215686, 0.215686, 1)

[node name="Menu" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="Menu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 350.0
offset_top = 282.5
offset_right = -350.0
offset_bottom = -79.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/CenterContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
text = "Commencer"

[node name="Quit" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
text = "Quitter
"

[node name="Credit" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
text = "Crédit"

[node name="TextureRect" type="TextureRect" parent="Menu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 305.0
offset_top = 96.0
offset_right = -304.0
offset_bottom = -247.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lb1tg")
stretch_mode = 2

[node name="Credit" type="CanvasLayer" parent="."]
visible = false

[node name="Button" type="Button" parent="Credit"]
offset_left = 15.0
offset_top = 455.0
offset_right = 166.0
offset_bottom = 509.0
text = "Retour"

[node name="Label" type="Label" parent="Credit"]
offset_left = 327.0
offset_top = 140.0
offset_right = 650.0
offset_bottom = 342.0
text = "Gaël Seiler
Damien Brunstein
Justine Friedirch"
label_settings = SubResource("LabelSettings_6hbmy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_en3jt")
autoplay = true

[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/Credit" to="." method="_on_credit_pressed"]
[connection signal="pressed" from="Credit/Button" to="." method="_on_button_pressed"]
